fix iframe scrolling on safari and mozilla for OSX

--- a/admin-base/materialize/custom/_workspace.scss
+++ b/admin-base/materialize/custom/_workspace.scss
@@ -15,6 +15,7 @@
 			top: 0;
 			bottom: 0;
 			left: 0;
+			z-index: 1;
 			#editable {
 				position: absolute; 
 				border: 1px solid transparent;
@@ -90,34 +91,42 @@
 			}
 		}
 		#editview {
+			cursor: default;
 			height: 100%;
+			width: 100%;
 			border: 0;
 			overflow: scroll;
+			position: absolute;
+			top: 0;
+			right: 0;
+			left: 0;
+			bottom: 0;
+			z-index: 0;
 		}
 		&.mobile {
 			#editviewoverlay {
 				width: 320px;
-                z-index: 1;
-                left: calc(50% - 160px);
+        z-index: 1;
+        left: calc(50% - 160px);
 			}
 			#editview {
 				width: 320px;
 				box-shadow: 0 10px 10px rgba(0,0,0,.75);
-                left: calc(50% - 160px);
-                position: absolute;
+        left: calc(50% - 160px);
+        position: absolute;
 			}
 		}
 		&.tablet {
 			#editviewoverlay {
 				width: 768px;
-                z-index: 1;
-                left: calc(50% - 384px);
+        z-index: 1;
+        left: calc(50% - 384px);
 			}
 			#editview {
 				width: 768px;
 				box-shadow: 0 10px 10px rgba(0,0,0,.75);
-                left: calc(50% - 384px);
-                position: absolute;
+        left: calc(50% - 384px);
+        position: absolute;
 			}
 		}
 		&.desktop {
